--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -3,20 +3,23 @@
   width: 100vw;
   position: relative;
   overflow: hidden;
-  
+  background-color: rgba(255, 255, 255, 0.05);
   z-index: 3;
+  h3{
+    z-index: 999;
+  }
   video{
     left: 0%;
     position: absolute;
     z-index: 2;
-    min-width: 100vw;
-    height: 100vh;
+    width: 100vw;
+    // min-height: 100vh;
   }
 
   .ssContainer {
     padding: 10%;
     .softskills {
-      background-color: rgba(255, 255, 255, 0.05);
+      
       z-index: 3;
       height: 50vh;
       display: grid;
