--- a/scss/main.css
+++ b/scss/main.css
@@ -751,15 +751,19 @@
   width: 100vw;
   position: relative;
   overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.05);
   z-index: 3;
+}
+
+.soft-skills h3 {
+  z-index: 999;
 }
 
 .soft-skills video {
   left: 0%;
   position: absolute;
   z-index: 2;
-  min-width: 100vw;
-  height: 100vh;
+  width: 100vw;
 }
 
 .soft-skills .ssContainer {
@@ -767,7 +771,6 @@
 }
 
 .soft-skills .ssContainer .softskills {
-  background-color: rgba(255, 255, 255, 0.05);
   z-index: 3;
   height: 50vh;
   display: -ms-grid;
